syntax = "proto3";

option csharp_namespace = "DemoProject.Web.Protobufs.V1";

package v1;

service GradeData {
	rpc GetAllGradesUnary (GetAllGradeRequest) returns (GetAllGradeResponse);
}

message GetAllGradeRequest {

}

message Grade {
	string Grade = 1;
	string Description = 2;
}
message GetAllGradeResponse {
	repeated Grade Grades = 5;
}
